hard-gists/855680/run.log
=== Docker Run Log for 855680 ===
Started at: Mi 29. Okt 17:50:54 CET 2025

[2025-10-29 17:50:55] START: Running container for 855680
[2025-10-29 17:50:55] SUCCESS: Container 67e75f0a3a51d2ab8e7c2697f9635b5ef5d0ed4e8b122e7b0a2bc003edd6f1d4 started for 855680
=== Container logs for 855680 ===
  File "/snippet.py", line 41
    print "Message received"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 855680 ===
[2025-10-29 17:50:57] INFO: Container 67e75f0a3a51d2ab8e7c2697f9635b5ef5d0ed4e8b122e7b0a2bc003edd6f1d4 has stopped
